2003-05-08  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* add support for quite some more types to the kseg import filter

2003-05-08  Maurizio Paolini  <paolini@dmf.unicatt.it>

        * fixed drawing problem while building a cubic by 9 points.  The
		problem was located in calcCubicRoot when the degree is
		less than 3

2003-05-08  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* add some properties to the arc object

	* organise the filters directory more sanely

	* fix for deleting: remove deleted objects from their children, so
		  they don't appear in saved files

2003-05-07  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* more undo support: redefining text labels and points is undoable
		  now..

	* small undo stuff cleanup

2003-05-06  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* fix the change text action for text labels to reuse the label
		  construction dialog.  this makes it support multi-line
		  labels, and changing the parameters

2003-05-05  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* add zoom in/out icons to the document popup menu

2003-05-03  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* add support for multiline text labels..  still needs some
		  further work.. 

	* add a set size action to the angle type

	* change the angle size icon..

2003-05-03  Maurizio Paolini  <paolini@dmf.unicatt.it>

	* add transformation support for arcs..

2003-05-02  Dominique Devriese  <devriese@kde.org>

	* add undo support for changing the coordinate system

	* generalize the undo support from the moving mode, and add undo
		  support for many of the object specific actions.. 

2003-05-01  Dominique Devriese  <devriese@kde.org>

	* perfect the grid..

	* fix useless error output on startup

	* add scroll bars to the full screen mode

	* add zoom actions to the document popup

	* add a change text action to text labels
